--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -45,14 +45,15 @@ h6 {
 }
 
 code {
-    font-family: "Monospace 821 W02 Roman";
+    font-family: 'Courier New', Courier, monospace;
+
     font-size: 1rem;
-    color: var(--primary-color);
-    background-color: var(--light-light-primary-color);
+    min-height: 4rem;
     display: block;
     padding: 1rem;
     border-radius: 5px;
-    min-height: 4rem;
+    color: var(--primary-color);
+    background-color: var(--light-light-primary-color);
 
 }
 
